--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "finpar/cash-module",
+    "name": "hds-solutions/cash-module",
     "description": "Cash module",
     "type": "laravel-module",
     "license": "GNU GPLv3",
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^8.0",
-        "finpar/backend-module": "dev-develop"
+        "hds-solutions/backend-module": "dev-develop"
     },
     "autoload": {
         "psr-4": {
